crates/quarto-math/tests/integration/snapshots/integration__normalize__ast__scripts__empty-sup.snap
---
source: crates/quarto-math/tests/integration/normalize.rs
expression: rendered(&n)
---
row @0..4
  scripts Auto @0..4
    run "x" @0..1
    sup:
      row @2..4
-- problems --
