crates/quarto-math/tests/integration/snapshots/integration__normalize__ast__scripts__script-on-frac.snap
---
source: crates/quarto-math/tests/integration/normalize.rs
expression: rendered(&n)
---
row @0..13
  scripts Auto @0..13
    frac Bar @0..11
      row @5..8
        run "a" @6..7
      row @8..11
        run "b" @9..10
    sup:
      run "2" @12..13
-- problems --
