crates/quarto-math/tests/integration/snapshots/integration__normalize__ast__scripts__script-on-group.snap
---
source: crates/quarto-math/tests/integration/normalize.rs
expression: rendered(&n)
---
row @0..7
  scripts Auto @0..7
    row @0..5
      run "a+b" @1..4
    sup:
      run "2" @6..7
-- problems --
