crates/quarto-math/tests/integration/snapshots/integration__normalize__ast__scripts__script-on-paren.snap
---
source: crates/quarto-math/tests/integration/normalize.rs
expression: rendered(&n)
---
row @0..7
  run "(" @0..1
  run "a+b" @1..4
  scripts Auto @4..7
    run ")" @4..5
    sup:
      run "2" @6..7
-- problems --
