crates/quarto-math/tests/integration/snapshots/integration__normalize__ast__scripts__sub-group.snap
---
source: crates/quarto-math/tests/integration/normalize.rs
expression: rendered(&n)
---
row @0..7
  scripts Auto @0..7
    run "x" @0..1
    sub:
      row @2..7
        run "i+1" @3..6
-- problems --
